fix: reduce h1 font size for improved readability

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ html, body {
 h1 {
   display: inline-block;
   color: white;
-  font-size: 12em; 
+  font-size: 6em; 
   text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
   }
   h1:after {
